thêm trang đăng nhập

--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>PetProjectEcommerce</title>
+    <title>Pet Project Ecommerce</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link id="theme-css" rel="stylesheet" type="text/css" href="assets/layout/styles/theme/lara-light-indigo/theme.css">
   </head>
-  <body class="bg-light">
+  <body>
     <app-root>
-      <div class="donut centered"></div>
     </app-root>
   </body>
 </html>
